# rust_learn

olang/: Cargo.toml
olang/src/: main.rs  todo.txt
olang/src/lexer/: code_reader.rs  lexer.rs  literal_value.rs  mod.rs  sample.rs  token.rs  token_matcher.rs  token_type.rs
olang/src/lexer/matchers/: close_brace_token_matcher.rs  close_paren_token_matcher.rs  comma_token_matcher.rs  equalequal_token_matcher.rs  mod.rs  open_brace_token_matcher.rs  open_paren_token_matcher.rs  token_matcher.rs  token_matcher_ampamp.rs  token_matcher_bang.rs  token_matcher_bang_equal.rs  token_matcher_break.rs  token_matcher_close_brace.rs  token_matcher_close_paren.rs  token_matcher_comma.rs  token_matcher_comment_line.rs  token_matcher_comment_multiline.rs  token_matcher_continue.rs  token_matcher_else.rs  token_matcher_equal.rs  token_matcher_equal_equal.rs  token_matcher_equalequal.rs  token_matcher_fn.rs  (+15 more)
rust_blockchain/: Cargo.toml
rust_blockchain/src/: main.rs
subscriptions/: Cargo.toml
subscriptions/src/: design.txt  main.rs
subscriptions/src/configurations/: configuration_mongo.rs  mod.rs
subscriptions/src/domain/: feature_setting.rs  feature_value.rs  mod.rs  subscription_plan.rs
subscriptions/src/errors/: database_error.rs  error_code.rs  mod.rs  state_code.rs
subscriptions/src/mongo/: mod.rs  mongo_connection_options.rs  mongo_connection_unit.rs
subscriptions/src/trip_builder_features/: mod.rs
subscriptions/src/validations/: mod.rs  validate.rs  validation_result.rs
tcpserver/src/: main.rs
trading-app/: Cargo.toml
trading-app/src/: main.rs
(+8 files in other folders)
